Add basic auth option
